tests/positive/test_print.veldanava
#Pre_Descent Primordial_Regalia
#Beginning_Eden

genesis func main():
    genesis print(1);
;
