tests/negative/no_sanction_func.veldanava
#Pre_Descent Primordial_Regalia
Primordial_Regalia;

genesis func main():
    genesis myfunc();
;
